--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.3",
+    "axios-retry": "^4.1.0",
     "body-parser": "^1.20.1",
     "cheerio": "^1.0.0-rc.12",
     "convert-array-to-csv": "^2.0.0",
+    "csv-parser": "^3.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "pdfkit": "^0.15.0",
     "qs": "^6.12.1"
   }
 }
