--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api scraping basic",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "https-proxy-agent": "^7.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pdfkit": "^0.15.0",
